deploy.yaml
apiVersion: v1
kind: Namespace
metadata: 
  name: njs-itg-CHANGEME_ENVID
  labels: 
    name: njs-itg-CHANGEME_ENVID

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: njs-api-CHANGEME_ENVID
  name: njs-api-CHANGEME_ENVID
  namespace: njs-itg-CHANGEME_ENVID
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: njs-api-CHANGEME_ENVID
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: njs-api-CHANGEME_ENVID
    spec:
      containers:
      - image: inthegame/njs_api_itg_CHANGEME_ENVID:CHANGEME_IMGID
        imagePullPolicy: IfNotPresent
        name: njs-api-CHANGEME_ENVID
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          requests:
            cpu: 100m
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: regcredww
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      
---
apiVersion: v1
kind: Service
metadata:
  name: njs-CHANGEME_ENVID-svc
  namespace: njs-itg-CHANGEME_ENVID
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: njs-api-CHANGEME_ENVID
  sessionAffinity: None
  type: ClusterIP
  
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/client_max_body_size: 500m
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
    nginx.ingress.kubernetes.io/enable-owasp-core-rules: "true"
    nginx.ingress.kubernetes.io/limit-rpm: "200"
    nginx.ingress.kubernetes.io/proxy-body-size: 500m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: njs-api-CHANGEME_ENVID
  namespace: njs-itg-CHANGEME_ENVID
spec:
  rules:
  - host: CHANGEME_HOSTID.inthegame.io
    http:
      paths:
      - backend:
          serviceName: njs-CHANGEME_ENVID-svc
          servicePort: 80
        path: /CHANGEME_HOSTPATH(/|$)(.*)
        pathType: Prefix
